src/components/project/Project.css
/* project card */
.project {
  display: flex;
  flex-direction: column;
  max-width: min(21.25rem, 100%);
  border-radius: var(--radius);
  border: 1px solid var(--border-light);
}

/* image wrapper with gradient background */
.project .img-wrapper {
  display: flex;
  align-items: center;
  justify-content: center;
  position: relative;
  background: var(--dark-clr);
  aspect-ratio: 16 / 9;
  border-radius: var(--radius) var(--radius) 0 0;
  overflow: hidden;
}

.project .img-wrapper .image-icon {
  font-size: var(--icon-md);
  color: var(--light-clr);
}

.project .img-wrapper img {
  width: 100%;
  height: 100%;
  object-fit: cover;
  border-radius: inherit;
  position: absolute;
  top: 0;
  left: 0;
  transition: transform 0.3s ease-in-out;
}

/* wrapper for textual info under the image */
.project .info-wrapper {
  display: flex;
  flex-direction: column;
  gap: var(--md-size);
  padding: var(--md-size);
}

.project .info-wrapper .project-title {
  font-weight: 500;
}

.project .info-wrapper .description {
  min-height: 5.625rem;
  font-size: 0.875rem;
  opacity: 0.7;
}

/* container for technology tags used in project */
.project .info-wrapper .tech-used {
  display: flex;
  gap: var(--sm-size);
  font-size: 0.75rem;
  font-weight: 500;
  position: relative;
}

.project .info-wrapper .tech-used .tech-stack {
  top: -1.25rem;
  left: 0;
  position: absolute;
  opacity: 0.7;
}

.project .info-wrapper .technology {
  display: flex;
  align-items: center;
  gap: var(--sm-size);
  padding: 0.1875rem var(--md-size);
  border-radius: var(--sm-size);
  border: 1px solid var(--border-light);
}

/* image hover effect */
.project:hover .img-wrapper img {
  transform: scale(1.05);
}

/* container that have the buttons */
.projects .link-button {
  display: flex;
  align-items: center;
  gap: var(--md-size);
  padding-block: 0 var(--md-size);
  padding-inline: var(--md-size);
  position: relative;
}

/* common properties of button */
.project .link-button .btn {
  display: flex;
  align-items: center;
  justify-content: center;
  color: inherit;
  text-decoration: none;
  gap: var(--sm-size);
  font-size: 0.875rem;
  font-weight: 500;
  padding: 0.5rem 1rem;
  border-radius: var(--radius-btn);
  border: 1px solid var(--border-light);
}

/* live preview button */
.project .link-button .live-preview {
  background-color: var(--light-clr);
  color: var(--dark-clr);
  transition: opacity 0.3s ease-in-out;
}

/* hover effect on preview button */
.project .link-button .live-preview:hover {
  opacity: 0.7;
}

/* transition for share and source-code buttons */
.project .link-button .source-code,
.project .link-button .share {
  transition: background 0.3s ease-in-out;
}

/* share button */
.project .link-button .share {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 34px;
  aspect-ratio: 1/1;
  font-size: 1.25rem;
  font-weight: 500;
  border-radius: 50%;
  position: absolute;
  right: var(--md-size);
  cursor: pointer;
}

/* hover effect for source-code and share buttons */
.project .link-button .source-code:hover,
.project .link-button .share:hover {
  background-color: var(--hover-light);
}

/* list of links for platforms to share to */
.share-links {
  display: none;
  flex-direction: column;
  position: absolute;
  background-color: var(--dark-clr);
  border: 1px solid var(--border-light);
  border-radius: var(--radius);
  padding: var(--md-size);
  gap: var(--sm-size);
  z-index: 1;
  bottom: var(--bg-size);
  right: 0;
}

/* link in list of share link */
.share-links a {
  display: flex;
  align-items: center;
  justify-content: start;
  gap: var(--md-size);
  padding: 0.5rem 1rem;
  font-size: 0.875rem;
  border-radius: var(--radius-btn);
  color: inherit;
  text-decoration: none;
  transition: background 0.3s ease-in-out;
}

/* hover effect for links in share link */
.share-links a:hover {
  background-color: var(--hover-light);
}

/* opens the share link list */
.project .link-button .share:hover .share-links {
  display: flex;
}

